--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "prettier": "npx prettier --write .",
+    "pretty-quick": "npx pretty-quick --staged",
     "prepare": "husky install"
   },
   "private": true,
@@ -48,6 +49,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.2.5",
+    "pretty-quick": "^4.0.0",
     "typescript": "~5.3.2"
   }
 }
